--- a/examen.html
+++ b/examen.html
@@ -19,6 +19,10 @@
             <li>Elemento de lista 3</li>
         </ul>
         <button id="alertButton">Mostrar Alerta</button>
+        <button id="toggleActorListButton">Mostrar/Ocultar Lista de Actores</button>
+        <div class="actor-list" id="actorList" style="display: none;">
+            <p>Actor List</p>
+        </div>
         <form id="dataForm">
             <label for="name">Nombre:</label>
             <input type="text" id="name" name="name" required>
