--- a/examen.html
+++ b/examen.html
@@ -23,6 +23,7 @@
         <div class="actor-list" id="actorList" style="display: none;">
             <p>Actor List</p>
         </div>
+        
         <form id="dataForm">
             <label for="name">Nombre:</label>
             <input type="text" id="name" name="name" required>
@@ -33,6 +34,7 @@
             <button type="submit">Enviar</button>
         </form>
         <div id="formData"></div>
+        <div id="countryList"></div>
     </main>
 </body>
 </html>
